# NuGASP

./: ZoomUnzoom.C  ZoomUnzoomInteractions.C
NuTrackN/: CMakeLists.txt  Design.cxx  Design.h  ExampleMain.cpp  HPGe1_133Ba_15cm  HPGe1_137Cs_15cm  HPGe1_152Eu_15cm  HPGe1_60Co_15cm  HPGe2_133Ba_15cm  HPGe2_137Cs_15cm  HPGe2_152Eu_15cm  HPGe2_60Co_15cm  INSTALL.TXT  Integral.cxx  Integral.h  Makefile  calib.cxx  calib.h  canvas  canvas.cxx  canvas.h  canvas.pro  canvas.pro.user.18579eb  canvas.pro.user.bfb681f  canvas.pro.user.f3b23f4  main.cxx  moc_canvas.cpp  moc_predefs.h  mydialog.cxx  mydialog.h  root_gui.C  script.sh  testSpectra  testSpectra2  tracknhistogram.cpp  tracknhistogram.h  zooming.cxx  zooming.h
Spectru/: date.txt  spectru.c
build-NuTrackN-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-NuTrackN-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6e5eb4c65a0789dca93c.json  codemodel-v2-5bed385ffc1b0446204b.json  index-2023-03-31T09-34-40-0510.json  target-NuTrackN-Debug-573f5a9857bb0fd13d66.json  target-NuTrackN_autogen-Debug-0eae9906700395b18263.json
build-NuTrackN-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-d1376f776b2e2d76da08.json  codemodel-v2-7a83834ffc5249f4cf70.json  index-2023-03-31T09-18-33-0441.json  target-NuTrackN-Debug-4d0168d58abdc933a1fc.json
